--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/express": "^5.0.0",
     "@types/node": "22.10.0",
     "nodemon": "^3.1.7",
     "semistandard": "17.0.0",
@@ -29,7 +28,7 @@
     "@mikro-orm/core": "6.4.0",
     "@mikro-orm/migrations": "6.4.0",
     "@mikro-orm/postgresql": "6.4.0",
-    "express": "4.21.1",
+    "bcrypt": "^5.1.1",
     "graphql": "^16.9.0",
     "pg": "8.13.1"
   },
