--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "dependencies": {
     "@apollo/server": "^4.11.2",
+    "@faker-js/faker": "^9.3.0",
     "@mikro-orm/cli": "6.4.0",
     "@mikro-orm/core": "6.4.0",
     "@mikro-orm/migrations": "6.4.0",
     "@mikro-orm/postgresql": "6.4.0",
+    "@mikro-orm/seeder": "^6.4.0",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
     "graphql": "^16.9.0",
