--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
     "graphql": "^16.9.0",
-    "pg": "8.13.1"
+    "pg": "8.13.1",
+    "uuid": "^11.0.3"
   },
   "mikro-orm": {
     "configPaths": [
