--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
     "graphql": "^16.9.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "8.13.1"
   },
   "mikro-orm": {
