--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "crypto": "^1.0.1",
     "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
     "pg": "8.13.1",
     "uuid": "^11.0.3"
   },
