--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.0",
     "nodemon": "^3.1.7",
     "semistandard": "17.0.0",
